# mikanarr

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md
anitors/: Cargo.toml
anitors/src/: covert_number.rs  helper.rs  lib.rs  parse_keyword.rs  parse_number.rs  parse_text.rs  text.rs  tokenize.rs  tokens.rs
anitors/tests/: parse_test.rs
database/: Cargo.toml
database/src/: lib.rs
database/src/entity/: config.rs  downloader.rs  indexer.rs  mikan_tmdb.rs  mod.rs  torrent.rs
database/src/migrate/: m_01_00_000.rs  mod.rs
downloader/: Cargo.toml
downloader/src/: lib.rs
downloader/src/aira2/: handler.rs  mod.rs  receiver.rs
downloader/src/qbittorrent/: handler.rs  mod.rs
downloader/src/transmission/: handler.rs  mod.rs  receiver.rs  sender.rs
encode/: Cargo.toml
encode/src/: lib.rs
manager/: Cargo.toml
parser/: Cargo.toml
parser/src/: lib.rs
parser/src/generate/: mod.rs
parser/src/parse/: info_hash.rs  mikan.rs  mod.rs  name_info.rs  tmdb_ids.rs
resources/: res.sqlite
searcher/: Cargo.toml
searcher/src/: lib.rs
searcher/src/rss/: channel.rs  enclosure.rs  guid.rs  item.rs  mod.rs  torrent.rs  torznab.rs  util.rs  xml_ext.rs
searcher/src/server/: fetch.rs  mod.rs  route.rs  torznab.rs
searcher/src/torrent/: helper.rs  mod.rs
searcher/src/torznab/: handler.rs  mod.rs  response.rs
server/: Cargo.toml
server/src/: main.rs
server/src/logger/: banner.rs  mod.rs
server/src/router/: auth.rs  indexer.rs  mod.rs  setting.rs
tmdb/: Cargo.toml
tmdb/src/: lib.rs
tmdb/src/search/: mod.rs  tv.rs
tmdb/src/tv_series/: details.rs
tmdb/tests/: api_test.rs
webui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
webui/src/: permission.ts
webui/src/api/: auth.ts  bangumi.ts  rss.ts  setting.ts
webui/src/api/model/: authModel.ts  bangumiModel.ts  rssModel.ts  settingModel.ts
webui/src/hooks/: index.ts
webui/src/layouts/: blank.vue  frame.vue  index.vue
webui/src/layouts/components/: Content.vue  Footer.vue  Header.vue  LayoutContent.vue  LayoutHeader.vue  LayoutSideNav.vue  SideNav.vue
webui/src/locales/lang/en_US/: components.ts  index.ts  layout.ts
webui/src/locales/lang/en_US/pages/: bangumi.ts  login.ts  rss.ts  setting.ts
webui/src/locales/lang/zh_CN/: components.ts  index.ts  layout.ts
webui/src/locales/lang/zh_CN/pages/: bangumi.ts  index.ts  login.ts  rss.ts  setting.ts
webui/src/pages/bangumi/: BangumiCover.vue  BangumiEmpty.vue  index.vue
webui/src/pages/login/: index.less  index.vue
webui/src/pages/login/components/: Header.vue  Login.vue
webui/src/pages/rss/: DialogForm.vue  index.vue
webui/src/pages/setting/: DialogForm.vue  index.vue
webui/src/router/: index.ts  routes.ts
webui/src/store/: index.ts  permission.ts  setting.ts  user.ts
webui/src/types/: axios.d.ts  interface.d.ts
webui/src/utils/: color.ts
webui/src/utils/request/: Axios.ts  AxiosTransform.ts  index.ts  utils.ts
