[package]
name = "database"
version = "0.1.0"
edition = "2021"
description = "sqlite 的 ORM 包装"

[dependencies]
encode = { path = "../encode" }
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "0.12", default-features = false, features = ["macros", "with-chrono", "sqlx-sqlite", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "0.12", default-features = false }
