[package]
name = "downloader"
version = "0.1.0"
edition = "2021"
description = "下载器客户端"

[dependencies]
database = { path = "../database" }
encode = { path = "../encode" }
anyhow = "1"
once_cell = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["cookies", "json"] }
