[package]
name = "parser"
version = "0.1.0"
edition = "2021"
description = "解析并缓存 torrent 文件名及其相关信息"

[dependencies]
anitors = { path = "../anitors" }
database = { path = "../database" }
encode = { path = "../encode" }
tmdb = { path = "../tmdb" }
anyhow = "1"
lazy-regex = "3"
log = "0.4"
bt_bencode = "0.7"
scraper = { version = "0.18", default-features = false }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["cookies", "json"] }

[dev-dependencies]
tokio-test = "0.4"
