[package]
name = "searcher"
version = "0.1.0"
edition = "2021"
description = "搜索相关，提供 torrent rss 解析"

[dependencies]
database = { path = "../database" }
parser = { path = "../parser" }
anyhow = "1"
once_cell = "1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
quick-xml = "0.31"
log = "0.4"
tokio = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["cookies", "json"] }
poem = { version = "1", features = ["anyhow"] }
