[package]
name = "mikanarr"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { path = "../database" }
encode = { path = "../encode" }
searcher = { path = "../searcher" }
anyhow = "1"
cached = { version = "0.46", default-features = false }
uuid = { version = "1", features = ["v4", "fast-rng"] }
dotenvy = "0.15"
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
poem = { version = "1", features = ["static-files"] }
